# agama-release-checker

./: .gitignore  AGENTS.md  HACKING.md  Makefile  PLAN.md  README.md  agama-release-checker  agama-release-checker.py  config.yml  pyproject.toml  setup.cfg
src/agama_release_checker/: caching.py  config.py  git_manager.py  iso.py  main.py  models.py  network.py  parsing.py  reporting.py  utils.py
src/agama_release_checker/reports/: __init__.py  gitea_pull_requests.py  gitea_report.py  iso_report.py  obs_report.py  obs_requests.py
tests/: test_gitea.py  test_gitea_pull_requests.py  test_iso.py  test_network.py  test_obs.py  test_obs_requests.py  test_reporting.py
tests/fixtures/: mirrorcache.html  osc_api_search_request_agama.xml  osc_api_search_request_agama_all.xml  osc_cat_agama_obsinfo.txt  osc_cat_agama_spec.txt  osc_cat_agama_yast_spec.txt  osc_cat_rubygem_agama_yast_spec.txt  osc_ls_package_agama.txt  osc_ls_package_rubygem_agama_yast.txt  osc_ls_project.txt  packages.json
