[metadata]
name = agama-release-checker
version = 0.1.0
description = A tool to check for Agama releases in ISOs.
author = First Last
author_email = your@email.com
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
requires-python = >=3.6

[options]
packages = find:
package_dir =
    = src
install_requires =
    pyyaml
    requests
    beautifulsoup4
    dataclasses; python_version < '3.7'

[options.entry_points]
console_scripts =
    agama-release-checker = agama_release_checker.main:main

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    requests-mock

[mypy]
explicit_package_bases = True
mypy_path = src
